<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="45dp"
            android:text="@string/name" />

        <TextView
            android:layout_width="76dp"
            android:layout_height="30dp"
            android:text="@string/zeit" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/listViewLayout"
        android:layout_width="match_parent"
        android:layout_height="443dp"
        android:layout_marginTop="20dp"
        android:layoutDirection="inherit"
        android:orientation="vertical">

        <ListView
            android:id="@+id/databaseList"
            android:layout_width="match_parent"
            android:layout_height="453dp">

        </ListView>


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/again"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/nochmal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.837" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>